--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body::before {
 
 nav {
 	position: relative;
-	background-color: #333;
-	color: #fff;
+	background-color: #EBEEF1;
+	color: #333;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -46,7 +46,7 @@ nav {
 }
 
 .logo a {
-	color: #fff;
+	color: #333;
 	text-decoration: none;
 	font-size: 24px;
 	font-weight:400;
@@ -78,7 +78,7 @@ nav {
 	}
 
 		.menu li a {
-			color: #fff;
+			color: #333;
 			text-decoration: none;
 			font-size: 20px;
 			font-weight: 500;
@@ -93,7 +93,7 @@ nav {
 				bottom: -3px; /* Adjust the position to your preference */
 				width: 100%;
 				height: 2px;
-				background-color: #fff; /* Color of the underline */
+				background-color: #C4C7CA; /* Color of the underline */
 			}
 
 			/* Active link effect */
@@ -104,7 +104,7 @@ nav {
 				bottom: -3px; /* Adjust the position to your preference */
 				width: 100%;
 				height: 2px;
-				background-color: #fff; /* Color of the underline */
+				background-color: #333; /* Color of the underline */
 			}
 
 
@@ -115,10 +115,10 @@ nav {
 
 
 .auth a {
-	color: #fff;
+	color: #333;
 	text-decoration: none;
 	padding: 8px 16px;
-	border: 1px solid #fff;
+	border: 1px solid #333;
 	border-radius: 5px;
 	margin-right:4vw;
 }
@@ -148,7 +148,7 @@ nav {
 		position: absolute;
 		height: 3px;
 		width: 100%;
-		background: white;
+		background: #333;
 		border-radius: 5px;
 		opacity: 1;
 		left: 0;
@@ -191,28 +191,28 @@ nav {
 	}
 
 button {
-	--color: #333;
+	--color: #C4C7CA;
 	font-family: inherit;
 	display: inline-block;
 	width: 10em;
-	height:3em;
+	height: 3em;
 	line-height: 2.5em;
 	overflow: hidden;
 	cursor: pointer;
 	font-size: 15px;
-	margin-right:3vw;
+	margin-right: 3vw;
 	z-index: 1;
-	color: #fff;
+	color: #EBEEF1;
 	border: 2px solid var(--color);
 	border-radius: 6px;
 	position: relative;
-	background-color:#333;
+	background-color: #3D93D3;
 }
 
 	button::before {
 		position: absolute;
 		content: "";
-		background: #3D93D3;
+		background: #2C7AB4;
 		width: 250px;
 		height: 200px;
 		z-index: -1;
@@ -238,13 +238,13 @@ button {
 	background-color: rgba(255, 255, 255, 0.8);
 	width: auto;
 	border: 1px solid #ccc;
-	margin-top: 20vh;
+	margin-top: 15vh;
 	position: center;
 }
 
 .content {
     margin-top: -5vh;
-    max-height: 460px;
+    max-height: 660px;
     overflow: hidden;
 }
 
