--- a/css/about.css
+++ b/css/about.css
@@ -8,10 +8,10 @@
 }
 .h2 {
     width: 100%;
-    padding: 20px 0;
-    text-align: center;
-    font-size: 3em;
-    color: #2F498B;
+    margin-top: -10vh;
+    text-align: center;  
+    font-size: 1em;
+    color: #fff;
     text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -24,14 +24,17 @@
 
 .text-section {
     width: 60%;
-    margin-top:8vh;
+    height: 70vh; /* Set a fixed height */
+    margin-top: 8vh;
+    overflow: auto; /* Enable scrolling */
 }
 
     .text-section h3 {
         margin-top: 0;
         text-align: center;
         margin-left: 10vw;
-        font-size: 1.5em;
+        margin-top: 3vhs;
+        font-size: 2.5em;
     }
 
     .text-section p {
@@ -56,10 +59,76 @@
         width:500px;
         height: auto;
     }
+ 
+        .text-section-2 h3 {
+            margin-top: 0;
+            text-align: center;
+            margin-left: 10vw;
+            margin-top: 3vhs;
+            font-size: 2.5em;
+        }
+    
+        .text-section-2 p {
+            margin-bottom: 20px;
+            text-align: center;
+            margin-left: 10vw;
+            letter-spacing: 2px;
+            font-size: 1.5em;
+            line-height: 1.5rem;
+            font-weight: 600;
+            color: #333;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+        }
 
 hr {
     border: none;
     border-top: 2px solid #000;
     margin: 0;
     margin-bottom:2vh;
+}
+
+/* about image scroll*/
+.h3 {
+    width: 100%;
+    padding-top: 30px;
+    text-align: center;
+    color: #333;
+    margin-top:-1vh;
+}
+#image-container-module {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 100%;
+}
+
+.image-item {
+    text-align: center;
+    width: 200px;
+}
+
+.image-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.image-item .info {
+    margin-top: 10px;
+}
+
+.image-item .info h3 {
+    margin: 0;
+    font-size: 1.2em;
+}
+
+.image-item .info p {
+    margin: 5px 0 0;
+    font-size: 1em;
+    color: #666;
 }
