--- a/css/contact.css
+++ b/css/contact.css
@@ -6,14 +6,7 @@
     color: white;
     margin-top:-1vh;
 }
-.h2 {
-    width: 100%;
-    margin-top: -10vh;
-    text-align: center;  
-    font-size: 1em;
-    color: #fff;
-    text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.5);
-}
+
  /*address section*/
  .address-section {
     display: flex;
@@ -62,28 +55,29 @@
     border: none;
   } 
 
-  .email-section {
+  .email-section, .phone-section {
     display: flex;
     flex-direction: column;
     align-items: left;
     margin: 20px 10vw; 
   }
   
-  .email-container {
+  .email-container, .phone-section {
     text-align: left;
     margin-bottom: 20px;
   }
   
-  .email-container img {
+  .email-container img, .phone-container img {
     width: 30px; /* Adjust size as needed */
     margin-right: 10px;
   }
   
-.email-container h2 {
+  .email-container h2, .phone-container h2 {
     font-size: 32px;
     margin-bottom: 10px;
   }
-  .email-container p {
+
+  .email-container p, .phone-container p {
     color: #333;
     font-weight: 400;
     font-size: 18px;
