--- a/css/nav_float.css
+++ b/css/nav_float.css
@@ -3,27 +3,14 @@ body {
 	opacity: 1;
 	font-family: system-ui;   
 }
-.fade-in {
-	opacity: 0; /* Set opacity to 0 when the fade-out class is applied */
-	transform: translateY(0);
-	transform: translateY(-100px);
-	transition: opacity 0.5s ease, transform 0.3s ease;
+.h1 {
+    width: 100%;
+    background: linear-gradient(90deg, #900B0E, #2A0304);
+    padding: 50px 0;
+    text-align: center;
+    color: white;
+    margin-top:-1vh;
 }
-body::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-image: url('../img/bg.png');
-	background-position: top;
-	background-repeat: no-repeat;
-	background-size: cover;
-	filter: blur(4px); 
-	z-index: -1; 
-}
-
 nav {
 	position: relative;
 	background-color: #EBEEF1;
@@ -225,105 +212,4 @@ button:before {
 button:hover::before {
 	top: -50px;
 	left: -18px;
-}
-
-/* body */
-.container {
-	background-color: rgba(255, 255, 255, 0.8);
-	width: auto;
-	height: 70vh;
-	border: 1px solid #ccc;
-	margin-top: 10vh;
-	position: center;
-}
-
-.content {
-	margin-top: -5vh;
-	max-height: 460px;
-	overflow: hidden;
-}
-
-/* Define CSS variables for reused values */
-:root {
-	--shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-/* Common styles */
-.label-common {
-	text-shadow: var(--shadow);
-}
-
-/* Individual classes */
-.label1 {
-	font-size: 96px;
-	margin-left: -11vw;
-	color: #0027CB;
-	text-shadow: var(--shadow);
-	font-weight: 700;
-	line-height: 2rem;
-}
-
-.label2 {
-	font-weight: 500;
-	color: #333;
-	font-size: 40px;
-	margin-left: 0.5vw;
-	line-height: 2rem;
-}
-
-.label3 {
-	font-weight: 400;
-	color: #333;
-	font-size: 20px;
-	margin-left: -8vw;
-	letter-spacing: 5px;
-	line-height: 1rem;
-}
-
-.label4 {
-	line-height: 5rem;
-	color: #333;
-	font-size: 85px;
-	margin-left: 6.9vw;
-	text-decoration: underline;
-	text-decoration-color: #900B0E;
-	text-underline-offset: 0.2em;
-	text-decoration-thickness: 0.05em;
-	font-weight: 700;
-}
-
-.label5 {
-	line-height: 5rem;
-	font-weight: 600;
-	color: #333;
-	font-size: 40px;
-	margin-left: 5vw;
-}
-
-.label6 {
-	font-size: 15px;
-	margin-left: -31vw;
-	margin-top:-20vh;
-	width: 7vw;
-	border-radius: 25px;
-}
-
-.label7 {
-	font-weight: 400;
-	font-size: 14px;
-	margin-left: 15vw;
-	letter-spacing: 1px;
-}
-
-.label8 {
-	font-weight: 400;
-	font-size: 14px;
-	margin-left: 13vw;
-	letter-spacing: 1px;
-}
-.label9 {
-	font-weight: 400;
-	font-size: 14px;
-	margin-left: -22vw;
-	letter-spacing: 1px;
 }
